k8s/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: jta
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: jta-mysql
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
  namespace: jta
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
