k8s/wordpress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jta-gateway
  namespace: jta
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
  - "jta.auburntechconsulting.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: wordpress-service
      port: 80
