k8s/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jta-wordpress
  namespace: jta

spec:
  ingressClassName: nginx
  rules:
  - host: jta.auburntechconsulting.com
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
